[project]
name = "chatterbox-tts"
version = "0.1.4"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "resemble-ai", email = "engineering@resemble.ai" }]
dependencies = [
    "numpy==2.0.0",
    "librosa==0.11.0",
    "s3tokenizer",
    "transformers==4.56.1",
    "diffusers==0.35.1",
    "resemble-perth==1.0.1",
    "conformer==0.3.2",
    "safetensors==0.6.2",
    "pkuseg ==0.0.25",
    "pykakasi==2.3.0",
    "gradio==5.44.1",
    "numba >= 0.59.0",
    "pandas>=2.2.0",
    "audioread>=3.0.1",
    "dicta-onnx",
    "tokenizers==0.22.0",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0", "torchaudio==2.6.0"]
cuda126 = ["torch==2.6.0+cu126", "torchaudio==2.6.0+cu126"]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=70", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
